feat : fetch open-api
