# MLF-ui/src/app/services/models/topic-response.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface TopicResponse {
+  articleIds?: Array<number>;
+  childrenIds?: Array<number>;
+  id?: number;
+  learningPathId?: number;
+  name?: string;
+  parentId?: number;
+}
